- Changed wacky characters to HTML entities or acceptable ASCII

--- a/www/records/index.htm
+++ b/www/records/index.htm
@@ -371,7 +371,7 @@
                               <p><font face="Arial"><a href="https://www.healthvault.com/us/en">With
                               a HealthVault account, you can store, manage and
                               share all of your health and wellness information
-                              in one central place. It’s available by
+                              in one central place. It's available by
                               HealthVault at no charge.<br>
                               <br>
  All you need is a username and
