--- a/www/services/cancer/hematopathology/cll.htm
+++ b/www/services/cancer/hematopathology/cll.htm
@@ -247,7 +247,7 @@ Lymphocytic Leukemia - Lymphoma Profile</title>
                                   &nbsp;&nbsp;&nbsp; cell proliferations, T-cell
                                           CLL, T-cell gamma/delta proliferations)<br>
                                   3)
-                                          Sézary syndrome<br>
+                                          S&eacute;zary syndrome<br>
                                   4)
                                           non-Hodgkin lymphoma (in blood, bone
                                           marrow, or body fluid)<br>
@@ -326,7 +326,7 @@ Lymphocytic Leukemia - Lymphoma Profile</title>
                                   and/or CD56. CD3 expression is absent.
                                   Genotyping demonstrates a germline
                                   configuration of the T-cell receptor gene.</font>
-                                  <p><font face="Arial" size="2">In Sézary syndrome, the neoplastic
+                                  <p><font face="Arial" size="2">In S&eacute;zary syndrome, the neoplastic
                                   lymphocytes are T cells with a helper cell
                                   phenotype. Expression of CD7, a pan T-cell
                                   antigen, is absent and is useful in
